# cli-buckshot-roulette

./: .gitignore  CMakeLists.txt  README.md
src/: dealer.c  game.c  main.c  player.c  shotgun.c  string.c
src/include/: dealer.h  game.h  player.h  shotgun.h  string.h
